--- a/Scripts/test_jupiter.ipynb
+++ b/Scripts/test_jupiter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,6 @@
      "output_type": "stream",
      "text": [
       "hello\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
      ]
     }
    ],
@@ -30,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,11 +32,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Rank",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "End_Of_Watch",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Day_Of_Week",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Cause",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Department",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "State",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Tour",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Badge",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Weapon",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Offender",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Summary",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "077d1621-e032-4d3a-b067-f5acf9557287",
+       "rows": [
+        [
+         "0",
+         "Constable",
+         "Darius Quimby",
+         null,
+         "1791-01-03",
+         "Monday",
+         "Stabbed",
+         "Albany County Constable's Office, New York",
+         "New York",
+         null,
+         null,
+         "Edged weapon; Knife",
+         "Executed in 1791",
+         "Constable Darius Quimby was stabbed to death while attempting to arrest a man on a trespassing warrant.The suspect was found guilty of murdering Constable Quimby in the July 1791 session of the New York State Supreme Court and was hanged on August 26, 1791.Constable Quimby is the first known law enforcement officer to be killed in the line of duty in the United States."
+        ],
+        [
+         "1",
+         "Sheriff",
+         "Cornelius Hogeboom",
+         "53.0",
+         "1791-10-22",
+         "Saturday",
+         "Gunfire",
+         "Columbia County Sheriff's Office, New York",
+         "New York",
+         "2 years",
+         null,
+         "Gun; Unknown type",
+         "Acquitted",
+         "Sheriff Cornelius Hogeboom was shot and killed while serving a writ of ejectment. He was ambushed and shot by a group of men who were disguised as Indians.Then suspects were arrested and charged with Sheriff Hogeboom's murder but all were acquitted.Sheriff Hogeboom had served with the Columbia County Sheriff's Office for two years and was a veteran of the American Revolutionary War. He was survived by his wife and is buried in Ghent Union Cemetery, Ghent, Columbia County, New York."
+        ],
+        [
+         "2",
+         "Deputy Sheriff",
+         "Isaac Smith",
+         null,
+         "1792-05-17",
+         "Thursday",
+         "Gunfire",
+         "Westchester County Sheriff's Department, New York",
+         "New York",
+         null,
+         null,
+         "Handgun",
+         "Executed in 1793",
+         "Deputy Sheriff Isaac Smith was shot and killed while attempting to serve a writ on a subject outside of a tavern at Delancey's Mill in the Bronx.As Deputy Smith attempted to arrest him he was shot. The subject, who was a well-known British loyalist, fled to Canada but was eventually caught and hung on October 2nd, 1793.Deputy Smith was survived by his wife and two children."
+        ],
+        [
+         "3",
+         "Marshal",
+         "Robert Forsyth",
+         "40.0",
+         "1794-01-11",
+         "Saturday",
+         "Gunfire",
+         "United States Department of Justice - United States Marshals Service, U.S. Government",
+         "United States",
+         "4 years, 4 months",
+         "4",
+         "Handgun; Pistol",
+         "Escaped",
+         "Marshal Robert Forsyth, believed to be one of the first U.S. Marshals killed in the line of duty, was shot and killed while he attempted to serve civil papers on a man. The suspect and his brother had holed up in an upstairs bedroom. As Marshal Forsyth attempted to gain access to the room, the man told him not to come any closer. At the same time, the suspect fired a shot through an opening in the door, fatally wounding Marshal Forsyth.After being arrested, the man twice escaped from jail, fled the state, and was never recaptured. One of the brothers died in Kentucky in 1817, and the second died in Georgia in 1826.Marshal Forsyth, who served in the American Revolutionary War, had been with the agency for more than four years after being named one of the first 13 marshals by George Washington.  He was survived by his wife and two sons, the younger of whom became Secretary of State for Foreign Affairs in the governments of two presidents and whose work included the purchase of Florida from the Spanish.Marshal Forsyth is buried in Saint Paul's Episcopal Church Cemetery, Augusta, Richmond County, Georgia."
+        ],
+        [
+         "4",
+         "Deputy Sheriff",
+         "Robert Berwick",
+         null,
+         "1797-06-29",
+         "Thursday",
+         "Gunfire",
+         "New York County Sheriff's Office, New York",
+         "New York",
+         null,
+         null,
+         "Handgun",
+         "Executed in 1797",
+         "Deputy Sheriff Robert Berwick was shot and killed while attempting to serve a writ on a subject on Broadway near St. Paul's Church.As Deputy Berwick walked with the prisoner to jail the man suddenly pulled out a pistol and shot him in the chest. The man ran to towards Barclay Street where he handed two pistols to another citizen who ran from his house upon hearing the gunshot.The man was convicted of Deputy Berwick's murder and executed on August 17th, 1797.Deputy Berwick was survived by his wife."
+        ]
+       ],
+       "shape": {
+        "columns": 13,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -193,7 +348,7 @@
        "4  Deputy Sheriff Robert Berwick was shot and kil...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +404,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -271,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +494,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,13 +505,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rank              618\n",
+       "Name            25493\n",
+       "Age                72\n",
+       "End_Of_Watch    18845\n",
+       "Day_Of_Week         7\n",
+       "Cause              36\n",
+       "Department       7229\n",
+       "State              58\n",
+       "Tour              369\n",
+       "Badge            4076\n",
+       "Weapon            136\n",
+       "Offender         1763\n",
+       "Summary         25590\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Build a function to explore my df\n",
-    "def explore_df(df):\n",
+    "df.nunique()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Age",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "5488d145-f2d4-4519-a13b-3dd47da8860f",
+       "rows": [
+        [
+         "count",
+         "22946.0"
+        ],
+        [
+         "mean",
+         "40.28941863505622"
+        ],
+        [
+         "std",
+         "15.799728532392674"
+        ],
+        [
+         "min",
+         "17.0"
+        ],
+        [
+         "25%",
+         "31.0"
+        ],
+        [
+         "50%",
+         "39.0"
+        ],
+        [
+         "75%",
+         "48.0"
+        ],
+        [
+         "max",
+         "1661.0"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 8
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>22946.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>40.289419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>15.799729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>17.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>31.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>39.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>48.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1661.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Age\n",
+       "count  22946.000000\n",
+       "mean      40.289419\n",
+       "std       15.799729\n",
+       "min       17.000000\n",
+       "25%       31.000000\n",
+       "50%       39.000000\n",
+       "75%       48.000000\n",
+       "max     1661.000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
    ]
   }
  ],
